--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "logo": "https://telegra.ph/file/97b8759e86bf092bf2acb.png",
     "description": "amort music allow you to stream music trought the telegram voice chat feature.",
     "keywords": ["music", "voice chat", "telegram"],
-    "repository": "https://github.com/kurd-bots/musicar",
+    "repository": "https://github.com/ssssfssssfssssfs/ssssfssssfssssf",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
