--- a/example.env
+++ b/example.env
@@ -15,7 +15,7 @@ OWNER_ID=633004612
 
 DATABASE_URL=
 
-LOG_CHANNEL=
+LOG_CHANNEL=-1001195100644
 
 BROADCAST_AS_COPY=False
 
@@ -29,7 +29,7 @@ DURATION_LIMIT=60
 
 UPDATES_CHANNEL=DD0DD
 
-GROUP_SUPPORT=amortSupportGroup 
+GROUP_SUPPORT=DD0DD
 
 ASSISTANT_NAME=DeTroitSongs 
 
