--- a/example.env
+++ b/example.env
@@ -13,7 +13,7 @@ API_HASH=7dd6c527159294be9285f44e9cec7473
 
 OWNER_ID=633004612 
 
-DATABASE_URL=
+DATABASE_URL=mongodb+srv://hamat:hamat@cluster0.i9wpi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 LOG_CHANNEL=-1001195100644
 
