--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
-*.session
-*.session-journal
 .env
-__pycache__
-.idea
-.vscode
-raw_files
-downloads
-venv
-local.env
-*.jpg
-*png
+*.log
+*.png
+venv/
+.idea/
+*.session
+raw_files/
+downloads/
+__pycache__/
+*.session-journal
 unknown_errors.txt
